Prevent white background flicker
Also remove null check on style object

--- a/projects/packages/videopress/src/client/block-editor/blocks/video/components/player/style.native.scss
+++ b/projects/packages/videopress/src/client/block-editor/blocks/video/components/player/style.native.scss
@@ -15,7 +15,7 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	height: 225px;
+	height: 224px;
 	width: 100%;
 	background-color: #000000;
 	padding-bottom: 14px;
